--- a/docker-compose.build.yml
+++ b/docker-compose.build.yml
@@ -4,7 +4,7 @@ services:
   build:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: docker/Dockerfile.solarpanel
     image: ${IMAGE_NAME:-solar-panel-detection:latest}
     volumes:
       - .:/app
