--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -129,14 +129,10 @@ pages:
 deploy_to_ec2:
   stage: deploy
   script:
-    # Make sure the key has proper line breaks
-    - echo "$EC2_SSH_KEY" > ec2_key2
-    - sed -i -e 's/\\n/\n/g' ec2_key2
-    - chmod 600 ec2_key2
-    - echo "$EC2_SSH_KEY" | wc -l
-    - ssh -o StrictHostKeyChecking=no -i ec2_key2 $EC2_USER@$EC2_HOST "
+    - echo "Deploying to EC2..."
+    - chmod 600 $EC2_DEPLOY_KEY
+    - ssh -i $EC2_DEPLOY_KEY -o StrictHostKeyChecking=no ubuntu@54.227.121.145> '
         cd /home/ubuntu/02 &&
-        git pull origin main &&
+        git pull origin Navid/Cleaning-up-for-aws &&
         docker-compose down &&
-        docker-compose up -d
-      "
+        docker-compose up -d --build
