--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -136,5 +136,5 @@ deploy_to_ec2:
       git fetch origin &&
       git checkout Navid/Cleaning-up-for-aws &&
       git reset --hard origin/Navid/Cleaning-up-for-aws &&
-      docker-compose down &&
-      docker-compose up -d --build "
+      sudo docker-compose down &&
+      sudo docker-compose up -d --build "
