Add solarpanel_detection_system volume and update Dockerfiles for initialization

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -276,6 +276,8 @@ services:
       - solarpanel_detection_system
     networks:
       - backend
+    volumes:
+      - ./solarpanel_detection_system:/solarpanel_detection_system
 
   solarpanel_detection_system:
     build:
