Add linting stage to CI pipeline, enhance Dockerfile, and update Airflow configuration
- Introduced a linting stage in the GitLab CI pipeline to enforce code quality using flake8.
- Updated Dockerfile for Airflow to include necessary system dependencies and set up entrypoint for DAGs.
- Modified Airflow configuration to specify DAGs folder and load examples.
- Added test DAG file and updated docker-compose files for testing environment.

--- a/.dockerignore
+++ b/.dockerignore
@@ -103,8 +103,11 @@ ENV/
 # Airflow
 airflow/logs/*
 !airflow/logs/.gitkeep
-airflow/dags/*
-!airflow/dags/.gitkeep
+airflow/dags/__pycache__/
+airflow/dags/*.pyc
+airflow/dags/*.pyo
+airflow/dags/*.pyd
+airflow/dags/.git/
 airflow/config/*
 !airflow/config/.gitkeep
 airflow/plugins/*
