--- a/docker/Dockerfile.airflow
+++ b/docker/Dockerfile.airflow
@@ -13,14 +13,14 @@ ENV PYTHONUNBUFFERED=1 \
 
 # Install system dependencies and pip tooling
 RUN apt-get update && apt-get install -y --no-install-recommends \
-        build-essential \
-        curl \
-        git \
-        libgl1-mesa-glx \
-        libglib2.0-0 \
-        libsm6 \
-        libxext6 \
-        libxrender-dev \
+    build-essential \
+    curl \
+    git \
+    libgl1-mesa-glx \
+    libglib2.0-0 \
+    libsm6 \
+    libxext6 \
+    libxrender-dev \
     && rm -rf /var/lib/apt/lists/* \
     && pip install --no-cache-dir pip==23.1.2 setuptools==68.0.0 wheel==0.40.0
 
@@ -39,7 +39,10 @@ RUN pip install --no-cache-dir torch torchvision --index-url https://download.py
 
 # Copy and install remaining Python dependencies
 COPY requirements.txt /tmp/
-RUN pip install --no-cache-dir $(grep -vE "torch|ultralytics|apache-airflow" /tmp/requirements.txt)
+RUN grep -vE '^(#|$)' /tmp/requirements.txt \
+    | grep -vE 'torch|ultralytics|apache-airflow' \
+    > /tmp/reqs-clean.txt \
+    && pip install --no-cache-dir -r /tmp/reqs-clean.txt
 
 # Create airflow user and directories
 RUN groupadd -r airflow --gid=50000 && \
@@ -68,7 +71,7 @@ EXPOSE 8080
 
 # Health check for webserver
 HEALTHCHECK --interval=30s --timeout=30s --retries=3 \
-  CMD curl -f http://localhost:8080/health || exit 1
+    CMD curl -f http://localhost:8080/health || exit 1
 
 # Switch to airflow user
 USER 50000
