--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,6 @@ boto3>=1.20.0
 python-dotenv>=1.0.0
 numpy<2.0.0
 pytest>=7.0.0
+pytest-cov
+requests        # often useful
+fastapi         # for type imports
