--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,7 +40,7 @@ lint:
   before_script:
     - pip install --cache-dir $PIP_CACHE_DIR flake8
   script:
-    - flake8 airflow/ solarpanel_detection_system/ tests/ --max-line-length=120
+    - flake8 airflow/dags solarpanel_detection_system/src tests/ -type f -name '*.py' -print0 | xargs -0 flake8 --max-line-length=120
 
 # ---------------------------- #
 # 2. TEST (unit)
