--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["flit_core >=3.2,<4"]
 build-backend = "flit_core.buildapi"
 
 [project]
-name = "solar_panel_detection"
+name = "solarpanel_detection_service"
 version = "0.0.1"
 description = "Detect solar panels using computer vision"
 authors = [
@@ -15,7 +15,7 @@ classifiers = [
     "Programming Language :: Python :: 3",
     
 ]
-requires-python = "~=3.13.1"
+requires-python = "~=3.11.12"
 
 [tool.black]
 line-length = 99
@@ -27,6 +27,7 @@ exclude = '''
 )/
 '''
 
+
 [tool.ruff.lint.isort]
-known_first_party = ["solar_panel_detection"]
+known_first_party = ["solar_panel_detection_service"]
 force_sort_within_sections = true
